--- a/1st page merged/old/registeration.html
+++ b/1st page merged/old/registeration.html
@@ -187,6 +187,7 @@
     <script src="../HeroSection/Hero-section-page1/script.js"></script>
     <script src="../competition/compApp.js"></script>
     <script src="../Schedule/script.js"></script>
+    <script src="main2.js"></script>
 </body>
 
 </html>
