same as leader implemented

--- a/1st page merged/old/member-registeration.html
+++ b/1st page merged/old/member-registeration.html
@@ -98,7 +98,7 @@
                                     mail <span>*</span></label><br>
                                     <div class="same_input">
                                         <input type="text" id="email" name="email" class="form-field same-flag">
-                                        <div class="same_as_leader" onclick="sameAsLeader()"></div>
+                                        <div class="same_as_leader" onclick="sameAsLeader()"><p>Same as Leader</p></div>
                                     </div>
                                 </div>
                             </div>
