alerts and delete members updated

--- a/1st page merged/reg2.html
+++ b/1st page merged/reg2.html
@@ -61,7 +61,7 @@
                     <form action="" class="info" id="info">
                         <div class="team_name left-input-field">
                             <label for="team_name" class="form-field">Team Name <span>*</span></label><br>
-                            <input type="text" id="team_name" name="team_name" class="form-field" oninput="this.className = ''">
+                            <input type="text" id="team_name" name="team_name" class="form-field" oninput="this.className = ''" required>
                         </div>
                         <div class="mem_form">
                             <div class="head_data">
@@ -73,12 +73,12 @@
                                 <div class="mem_info">
                                     <div class="left-input-field">
                                         <label for="team_heads_name" class="form-field">Team Head's Name <span>*</span></label><br>
-                                        <input type="text" id="team_heads_name" name="team_heads_name" class="form-field" oninput="this.className = ''">
+                                        <input type="text" id="team_heads_name" name="team_heads_name" class="form-field" oninput="this.className = ''" required>
                                     </div>
                                     <div class="right-input-field">
                                         <label for="gender" class="form-field">Gender <span>*</span></label><br>
                                         <!-- <input type="" id="team_name" name="team_name" class="form-field"> -->
-                                        <select id="gender" name="gender" oninput="this.className = ''">
+                                        <select id="gender" name="gender" oninput="this.className = ''" required>
                                             <option value="" disabled selected>Select your option</option>
                                             <option value="male">Male</option>
                                             <option value="female">Female</option>
@@ -89,27 +89,27 @@
                                 <div class="mem_info">
                                     <div class="left-input-field">
                                         <label for="heads_contact_number" class="form-field">Head's Contact Number <span>*</span></label><br>
-                                        <input type="text" id="heads_contact_number" name="heads_contact_number" class="form-field" oninput="this.className = ''">
+                                        <input type="text" id="heads_contact_number" name="heads_contact_number" class="form-field" oninput="this.className = ''" required>
                                     </div>
                                     <div class="right-input-field">
                                         <label for="heads_email" class="form-field">E - mail <span>*</span></label><br>
-                                        <input type="text" id="heads_email" name="heads_email" class="form-field" oninput="this.className = ''">
+                                        <input type="text" id="heads_email" name="heads_email" class="form-field" oninput="this.className = ''" required>
                                     </div>
                                 </div>
                                 <div class="mem_info">
                                     <div class="left-input-field">
                                         <label for="heads_program_enrolled" class="form-field">Program Enrolled <span>*</span></label><br>
-                                        <input type="text" id="heads_program_enrolled" name="heads_program_enrolled" class="form-field" oninput="this.className = ''">
+                                        <input type="text" id="heads_program_enrolled" name="heads_program_enrolled" class="form-field" oninput="this.className = ''" required>
                                     </div>
                                     <div class="right-input-field">
                                         <label for="heads_institute_name" class="form-field">Institute Name <span>*</span></label><br>
-                                        <input type="text" id="heads_institute_name" name="heads_institute_name" class="form-field" oninput="this.className = ''">
+                                        <input type="text" id="heads_institute_name" name="heads_institute_name" class="form-field" oninput="this.className = ''" required>
                                     </div>
                                 </div>
                                 <div class="mem_info">
                                     <div class="left-input-field">
                                         <label for="heads_year_of_passing" class="form-field">Year Of Passing <span>*</span></label><br>
-                                        <input type="text" id="heads_year_of_passing" name="heads_year_of_passing" class="form-field" oninput="this.className = ''">
+                                        <input type="text" id="heads_year_of_passing" name="heads_year_of_passing" class="form-field" oninput="this.className = ''" required>
                                     </div>
                                     <div class="right-input-field">
                                         
